# hydra-tod

./: .claudeignore  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  TOD_simulator.py  Tsys_sampler.py  Tsys_samples.npy  Untitled-1.ipynb  Untitled-1.nb  block_coordinates.npz  demonstration.ipynb  environment.yml  flicker_model.py  flicker_teset.py  full_Gibbs_sampler.py  gain_sampler.py  gain_samples.npy  gaussian_beam_pointing.fits  import numpy as np.py  job.sh  linear_sampler.py  linear_solver.py  mcmc_sampler.py  mpiutil.py  noise_sampler.py  noise_samples.npy  polynomial_gain.py  pyproject.toml  requirements.txt  sim_and_test_multi_TOD.py  sim_and_test_single_TOD.py  sim_multi_TOD_results.ipynb  test.ipynb  test_mpi.py  tod_main.py  utils.py  workflow.ipynb
.github/workflows/: ci.yml
archived/: flicker_convolution.py  linear_sampling.ipynb  scalapack_demo.py  scan_coordinates.ipynb  sim_multi_TOD_results.ipynb  sim_single_TOD_results.ipynb  workflow_GS1_old.ipynb  workflow_GSF5 copy.ipynb  workflow_TODs_GS1 copy.ipynb
core/: corr_noise_model.py  gain_solver.py  noise_solver.py  util.py
docs/: conf.py  index.rst  installation.rst  quickstart.rst
examples/: flicker_noise_demonstration.ipynb  sim_and_test_single_TOD.py  workflow_GS1.ipynb  workflow_TODs_GS5_linear.ipynb
hydra_TOD/: MCMC_diagnostics.py  TOD_simulator.py  Tsys_sampler.py  __init__.py  bayes_util.py  flicker_corr_emulator.pkl  flicker_logdet_emulator.pkl  flicker_model.py  full_Gibbs_sampler.py  gain_sampler.py  linear_sampler.py  linear_solver.py  local_sampler.py  mcmc_sampler.py  mpiutil.py  noise_sampler.py  noise_sampler_fixed_fc.py  noise_sampler_old.py  nuts_sampler.py  simulation.py  test.ipynb  utils.py  visualisation.py
notebooks/: TOD_sim2.ipynb  burn_in_test.ipynb  demonstration.ipynb  gain_strategy_demonstration.ipynb  generating_1oF_noise.ipynb  generating_FGs.ipynb  generating_HI.ipynb  gridder_edit.py  log_det_emu.ipynb  map_maker.ipynb  method_comparison.ipynb  posterior_statistics.csv  single_freq_edit.py  test_visual.ipynb  workflow.ipynb  workflow_0.ipynb  workflow_0_flicker2.ipynb  workflow_0_flicker3.ipynb  workflow_0_gain_prior.ipynb  workflow_0_gain_prior_log.ipynb  workflow_0_log_linear_gain.ipynb  workflow_GS1.ipynb  workflow_GS1_test_log.ipynb  workflow_GS5.ipynb  workflow_GSF5.ipynb  workflow_TODs_2.ipynb  workflow_TODs_GS1.ipynb  workflow_TODs_GS5.ipynb  workflow_TODs_GSF5.ipynb  workflow_visualisation.ipynb
scripts/: combine_residual_plots.py  job.sh  sim_and_test_multi_TOD.py  use_combined_plots.py
sim1_singleTOD_results/: single_TOD_Tsys_samples.npy  single_TOD_gain_samples.npy  single_TOD_noise_samples.npy
sim2_multi_results/: Tsys_samples_v2.npy  gain_samples_v2.npy  noise_samples_v2.npy
sim3_multi_results/: Tsys_samples_v2.npy  gain_samples_v2.npy  noise_samples_v2.npy
test/: analysis.py  flicker_noise_demonstration.ipynb  log_det_emu.ipynb  method_comparison.ipynb  test_nuts_HMC.ipynb  workflow_GS1.ipynb  workflow_GS5.ipynb  workflow_GSF5.ipynb  workflow_TODs_GS1_linear.ipynb  workflow_TODs_GSF5_factorized.ipynb  workflow_TODs_GSF5_joint_loc.ipynb  workflow_TODs_GSF5_linear.ipynb  workflow_TODs_GSF5_log.ipynb  workflow_simulation.ipynb
tests/: test_diagnostics.py  test_flicker_model.py  test_imports.py  test_linear.py  test_utils.py
(+111 files in other folders)
