[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydra-tod"
version = "0.1.0"
description = "Time-Ordered Data analysis package for radio astronomy"
readme = "README.md"
authors = [
    {name = "Zheng Zhang", email = "zheng_zhang1@alumni.brown.edu"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research", 
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy", 
    "matplotlib",
    "healpy",
    "h5py",
    "mpi4py"
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "notebook",
    "pytest",
    "black",
    "flake8"
]

[project.urls]
Homepage = "https://github.com/zzhang0123/flicker"
Repository = "https://github.com/zzhang0123/flicker.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["hydra_tod*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
